# FlightClub

./: Flight Deals - links.csv  Flight Deals - prices.csv  check_send.py  email.txt  flight_iata.py  get_flight_deals.py  get_upload_csv.py  mailing_list.csv  main.py  pyproject.toml  subscribe.py
